Fix: Correcciones UI/UX y copies editoriales
LANDING PAGE:
- Grid centrado con max-width controlado
- Reordenado: Análisis de Vocación primero, Geointeligencia después

MKT DIGITAL:
- Copy 'Sin Contratos Largos' → 'Contratación' con nuevo texto
- Agregado '+IVA' en todos los precios (15K, 25K, 40K)

CRM:
- Metodología traducida al español:
  Discovery → Diagnóstico
  Build → Construcción
  Enable → Habilitación

AUTOMATIZACIÓN:
- Subtítulo actualizado según copy editorial

DESIGN SYSTEM (fix overflow):
- .wo-steps: max-width 90%, padding lateral, font-size reducido
- .wo-grid: max-width 95%, minmax(0, 1fr) para evitar desborde
- .wo-card: overflow hidden, min-width 0, word-wrap

--- a/deck-wo-automatizacion/index.html
+++ b/deck-wo-automatizacion/index.html
@@ -114,7 +114,7 @@
            ═══════════════════════════════════════════════════════════════ -->
       <section data-background-gradient="linear-gradient(135deg, #0F0F1A 0%, #252542 100%)" data-particles="true" aria-label="Nuestra solución">
         <h1 class="wo-section__title">Automatiza lo <span class="accent">Repetitivo</span></h1>
-        <p class="wo-section__subtitle">Tu equipo para estrategia. Las máquinas para ejecución.</p>
+        <p class="wo-section__subtitle">Tu equipo humano se enfoca en estrategia. La computadora para ejecutar estos procesos.</p>
         
         <aside class="notes">
           Principio: Lo que se repite, se automatiza.
