--- a/deck-wo-crm/index.html
+++ b/deck-wo-crm/index.html
@@ -218,10 +218,10 @@
       <section data-background-color="#0F0F1A" aria-label="Metodología">
         <h2>Nuestra <span class="accent">Metodología</span></h2>
         <ul class="wo-steps" role="list">
-          <li class="fragment fade-up" data-fragment-index="1" role="listitem"><strong>Discovery:</strong> Mapeamos tu proceso comercial actual. Identificamos fricciones.</li>
+          <li class="fragment fade-up" data-fragment-index="1" role="listitem"><strong>Diagnóstico:</strong> Mapeamos tu proceso comercial actual. Identificamos fricciones.</li>
           <li class="fragment fade-up" data-fragment-index="2" role="listitem"><strong>Diseño:</strong> Definimos pipeline, campos, automatizaciones y reportes.</li>
-          <li class="fragment fade-up" data-fragment-index="3" role="listitem"><strong>Build:</strong> Configuramos el CRM. Migramos datos limpios.</li>
-          <li class="fragment fade-up" data-fragment-index="4" role="listitem"><strong>Enable:</strong> Capacitación por rol + 30 días de acompañamiento.</li>
+          <li class="fragment fade-up" data-fragment-index="3" role="listitem"><strong>Construcción:</strong> Configuramos el CRM. Migramos datos limpios.</li>
+          <li class="fragment fade-up" data-fragment-index="4" role="listitem"><strong>Habilitación:</strong> Capacitación por rol + 30 días de acompañamiento.</li>
         </ul>
         <div class="grid-background" role="presentation" aria-hidden="true"></div>
         
