--- a/deck-wo-marketing-digital/index.html
+++ b/deck-wo-marketing-digital/index.html
@@ -129,8 +129,8 @@
             <p>Diseñamos estrategias para presupuestos de $5K-$30K mensuales.</p>
           </div>
           <div class="wo-card fragment zoom-in" role="listitem">
-            <h3>Sin Contratos Largos</h3>
-            <p>Mínimo 3 meses. Si no funciona, no te amarramos.</p>
+            <h3>Contratación</h3>
+            <p>Iniciando mínimo 3 meses, el periodo correcto para medir y analizar resultados precisos.</p>
           </div>
           <div class="wo-card fragment zoom-in" role="listitem">
             <h3>Resultados Claros</h3>
@@ -283,25 +283,24 @@
           <div class="wo-card fragment zoom-in" data-fragment-index="1" role="listitem">
             <h3>Arranque</h3>
             <p class="card-tier">Para empezar</p>
-            <p class="card-price">$15K/mes</p>
+            <p class="card-price">$15K/mes +IVA</p>
             <p class="card-time">Meta Ads + Landing + Reporte</p>
           </div>
           <div class="wo-card wo-card--highlight fragment zoom-in" data-fragment-index="2" role="listitem">
             <h3>Crecimiento</h3>
             <p class="card-tier">El más popular</p>
-            <p class="card-price">$25K/mes</p>
+            <p class="card-price">$25K/mes +IVA</p>
             <p class="card-time">Ads + Landing + Email + SEO</p>
           </div>
           <div class="wo-card fragment zoom-in" data-fragment-index="3" role="listitem">
             <h3>Aceleración</h3>
             <p class="card-tier">Máximo impacto</p>
-            <p class="card-price">$40K/mes</p>
+            <p class="card-price">$40K/mes +IVA</p>
             <p class="card-time">Todo + Contenido + Estrategia</p>
           </div>
         </div>
         <p class="fragment fade-up" style="text-align: center; font-size: 0.6em; color: var(--wo-text-muted); margin-top: 1em;">
-          *Presupuesto de pauta no incluido. Recomendamos mínimo 1.5x del fee mensual.
-        </p>
+          *Presupuesto de pauta no incluido. Recomendamos mínimo 1.5x del fee mensual.</p>
         <div class="grid-background" role="presentation" aria-hidden="true"></div>
         
         <aside class="notes">
