New mapbox map component

--- a/hub/components.html
+++ b/hub/components.html
@@ -76,6 +76,9 @@
         <a href="templates.html">
           <span>&#x1F4C4;</span> Templates
         </a>
+        <a href="mapbox.html">
+          <span>&#x1F5FA;</span> Mapbox Theme
+        </a>
         
         <h4>Recursos</h4>
         <a href="../index.html">
