--- a/hub/index.html
+++ b/hub/index.html
@@ -55,6 +55,9 @@
         <a href="templates.html">
           <span>&#x1F4C4;</span> Templates
         </a>
+        <a href="mapbox.html">
+          <span>&#x1F5FA;</span> Mapbox Theme
+        </a>
         
         <h4>Recursos</h4>
         <a href="../index.html">
@@ -80,7 +83,7 @@
           <div class="hub-stat-label">Colores de Marca</div>
         </div>
         <div class="hub-stat-card">
-          <div class="hub-stat-value">12</div>
+          <div class="hub-stat-value">13</div>
           <div class="hub-stat-label">Componentes</div>
         </div>
         <div class="hub-stat-card">
