--- a/hub/spacing.html
+++ b/hub/spacing.html
@@ -59,6 +59,17 @@
           <span>&#x1F5FA;</span> Mapbox Theme
         </a>
         
+        <h4>Assets</h4>
+        <a href="assets.html">
+          <span>&#x1F3F7;</span> Logos
+        </a>
+        <a href="backgrounds.html">
+          <span>&#x1F304;</span> Fondos
+        </a>
+        <a href="icons.html">
+          <span>&#x2B50;</span> Iconos
+        </a>
+        
         <h4>Recursos</h4>
         <a href="../index.html">
           <span>&#x1F4BC;</span> Ver Decks
