Improve visual previews in Design System Hub
- backgrounds.html: Enhanced gradient previews with slide mockups,
  added interactive tsParticles demo section with configuration
- colors.html: Added visual comparison bar for dark theme colors,
  transparency patterns for rgba colors, improved contrast indicators
EOF

--- a/hub/mapbox.html
+++ b/hub/mapbox.html
@@ -237,6 +237,9 @@
         <a href="mapbox.html" class="active">
           <span>&#x1F5FA;</span> Mapbox Theme
         </a>
+        <a href="map-components.html">
+          <span>&#x1F4CD;</span> Map Components
+        </a>
         
         <h4>Assets</h4>
         <a href="assets.html">
