--- a/hub/components.html
+++ b/hub/components.html
@@ -79,6 +79,9 @@
         <a href="mapbox.html">
           <span>&#x1F5FA;</span> Mapbox Theme
         </a>
+        <a href="map-components.html">
+          <span>&#x1F4CD;</span> Map Components
+        </a>
         
         <h4>Assets</h4>
         <a href="assets.html">
