--- a/hub/index.html
+++ b/hub/index.html
@@ -58,6 +58,9 @@
         <a href="mapbox.html">
           <span>&#x1F5FA;</span> Mapbox Theme
         </a>
+        <a href="map-components.html">
+          <span>&#x1F4CD;</span> Map Components
+        </a>
         
         <h4>Assets</h4>
         <a href="assets.html">
@@ -99,7 +102,7 @@
           <div class="hub-stat-label">Variantes de Logo</div>
         </div>
         <div class="hub-stat-card">
-          <div class="hub-stat-value">13</div>
+          <div class="hub-stat-value">23</div>
           <div class="hub-stat-label">Componentes</div>
         </div>
       </div>
