fix(hub): Logo amarillo en tema Brand, blanco en tema Tech
- Cambia el logo del sidebar según el tema activo
- Tema Yellow (Brand): WoLogos_2026-01.svg (amarillo)
- Tema Blue (Tech): WoLogos_2026-03.svg (blanco)
- Actualiza versión del badge a v2.2

--- a/hub/index.html
+++ b/hub/index.html
@@ -30,8 +30,9 @@
     <!-- Sidebar -->
     <aside class="hub-sidebar">
       <div class="hub-logo">
-        <img src="../LOGOS/logo light @3x.png" alt="Workalógico">
-        <span class="hub-version">Design System v2.0</span>
+        <img src="../LOGOS/SVG/WoLogos_2026-01.svg" alt="Workalógico" class="hub-logo__yellow">
+        <img src="../LOGOS/SVG/WoLogos_2026-03.svg" alt="Workalógico" class="hub-logo__white">
+        <span class="hub-version">Design System v2.2</span>
       </div>
       
       <nav class="hub-nav">
