--- a/index.html
+++ b/index.html
@@ -444,6 +444,33 @@
     </header>
     
     <main>
+      <!-- ESTRATEGIA & CRECIMIENTO -->
+      <div class="section-header">
+        <div class="section-icon">
+          <!-- Ícono de sistema ascendente / growth -->
+          <svg viewBox="0 0 24 24">
+            <path d="M12 2L12 8M12 16L12 22"/>
+            <path d="M5 12h14"/>
+            <circle cx="12" cy="12" r="3"/>
+            <path d="M12 5l-3 3h6l-3-3"/>
+            <path d="M12 19l3-3H9l3 3"/>
+          </svg>
+        </div>
+        <h2 class="section-title">Estrategia & Crecimiento</h2>
+        <p class="section-description">Arquitectura del crecimiento empresarial. Sistema integrado para desarrollo de proyectos.</p>
+      </div>
+      <div class="decks-grid" style="grid-template-columns: minmax(320px, 400px); justify-content: center;">
+        <a href="deck-wo-growth-tesis/" class="deck-card">
+          <span class="deck-card__badge deck-card__badge--yellow">Growth Tesis</span>
+          <h3 class="deck-card__title">El Aliado Estratégico Total</h3>
+          <p class="deck-card__description">Posicionamiento 2026 como Agencia de Desarrollo de Proyectos. 4 pilares, WoOS, metodología y modelo operativo.</p>
+          <div class="deck-card__meta">
+            <span class="deck-card__slides">📊 12 slides</span>
+            <span class="deck-card__arrow">→</span>
+          </div>
+        </a>
+      </div>
+      
       <!-- GEOINTELIGENCIA -->
       <div class="section-header">
         <div class="section-icon">
