--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Workalógico">
   <meta name="robots" content="noindex, nofollow">
   
-  <title>Workalógico | Portafolio de Presentaciones</title>
+  <title>Workalógico | Portafolio de Presentaciones V1.0</title>
   
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="LOGOS/teseracto yellow@3x.png">
