--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
         <p class="section-description">Herramientas internas y documentación del sistema de diseño.</p>
       </div>
       <div class="decks-grid" style="grid-template-columns: minmax(320px, 400px); justify-content: center;">
-        <a href="hub/" class="deck-card">
+        <a href="hub/index.html" class="deck-card">
           <span class="deck-card__badge deck-card__badge--yellow">Interno</span>
           <h3 class="deck-card__title">Design System Hub</h3>
           <p class="deck-card__description">Documentación centralizada de tokens, componentes y templates. Single Source of Truth para todas las presentaciones.</p>
