--- a/hub/pricing-components.html
+++ b/hub/pricing-components.html
@@ -304,10 +304,11 @@
 /* Precio principal */
 .wo-card--pricing .card-price {
   font-family: var(--font-heading);
-  font-size: 1.4em;
+  font-size: 1em;
   font-weight: 700;
   color: var(--wo-accent-primary);
   margin: 0.3em 0;
+  white-space: nowrap;
 }</pre>
           </div>
         </div>
