--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Workalógico - Portafolio de Presentaciones Comerciales">
+  <meta name="description" content="Workalógico - Portafolio de Presentaciones Comerciales V1.1">
   <meta name="author" content="Workalógico">
   <meta name="robots" content="noindex, nofollow">
   
